Chnage in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /build/cb/Basic/bin
 /build/cb/Basic/obj
+/build/cb/UnitTests/bin/
+/build/cb/UnitTests/obj/
+/build/cb/WeatherBased/bin/
+/build/cb/WeatherBased/obj/
 /doc/html
+/lib
+*.layout
+*.depend
+
