--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 project(WBSFBasic LANGUAGES CXX)
 
-find_package(Boost CONFIG REQUIRED)
+find_package(Boost CONFIG REQUIRED COMPONENTS process serialization locale)
 
 file(GLOB_RECURSE WBSF_BASIC_SRC *.cpp *.h *.hpp)
 
@@ -10,4 +10,4 @@ add_library(WBSFBasic STATIC
 )
 
 target_include_directories(WBSFBasic PUBLIC ${PROJECT_SOURCE_DIR}/..)
-target_link_libraries(WBSFBasic PUBLIC Boost::boost)
+target_link_libraries(WBSFBasic PUBLIC Boost::process Boost::serialization Boost::locale)
