--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 project(WBSFBasic LANGUAGES CXX)
 
-find_package(Boost CONFIG REQUIRED COMPONENTS process serialization locale)
+find_package(Boost CONFIG REQUIRED COMPONENTS process serialization locale dynamic_bitset)
 
 file(GLOB_RECURSE WBSF_BASIC_SRC *.cpp *.h *.hpp)
 
@@ -9,5 +9,6 @@ add_library(WBSFBasic STATIC
     ${WBSF_BASIC_SRC}
 )
 
-target_include_directories(WBSFBasic PUBLIC ${PROJECT_SOURCE_DIR}/..)
-target_link_libraries(WBSFBasic PUBLIC Boost::process Boost::serialization Boost::locale)
+target_include_directories(WBSFBasic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+
+target_link_libraries(WBSFBasic PUBLIC Boost::process Boost::serialization Boost::locale Boost::dynamic_bitset)
