--- a/src/Geomatic/CMakeLists.txt
+++ b/src/Geomatic/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 project(WBSFGeomatic LANGUAGES CXX)
 
-find_package(Boost CONFIG REQUIRED)
 find_package(GDAL CONFIG REQUIRED)
 
 file(GLOB_RECURSE WBSF_GEOMATIC_SRC *.cpp *.h *.hpp)
@@ -11,5 +10,6 @@ add_library(WBSFGeomatic STATIC
     ${WBSF_GEOMATIC_SRC}
 )
 
-target_link_libraries(WBSFGeomatic PUBLIC Boost::boost GDAL::GDAL)
-target_include_directories(WBSFGeomatic PUBLIC ${PROJECT_SOURCE_DIR}/..)
+target_include_directories(WBSFGeomatic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+
+target_link_libraries(WBSFGeomatic PUBLIC WBSFBasic GDAL::GDAL)
